remove even more duplicate data components